syntax = "proto3";

package redbox_authentication;

option csharp_namespace = "RedBoxAuthentication";

enum LoginStatus {
  INVALID_CREDENTIALS = 0;
  ALREADY_LOGGED = 1;
  USER_NOT_EXIST = 2;
  LOGIN_SUCCESS = 3;
  REQUIRE_2FA = 4;
  IS_BLOCKED = 5;
}

enum TwoFactorResponseCode {
  VALID_CODE = 0;
  INVALID_CODE = 1;
  USER_NOT_LOGGED = 2;
  TFA_NOT_ENABLED = 3;
  ALREADY_VERIFIED = 4;
}

message Nil {}

message LoginRequest {
  string password = 1;
  optional string username = 2;
  optional string email = 3;
}

message LoginResponse {
  LoginStatus status = 1;
  optional string token = 2;
  optional int64 expiresAt = 3;
  optional uint32 attempts_left = 4;
}

message TwoFactorRequest {
  string two_fa_code = 1;
  string token = 2;
}

message TwoFactorResponse {
  TwoFactorResponseCode code = 1;
  optional int64 tokenExpiresAt = 2;
}

message TokenRefreshResponse {
  string Token = 1;
  int64 expiresAt = 2;
}

service AuthenticationGrpcService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (Nil) returns (Nil);
  rpc Verify2FA(TwoFactorRequest) returns (TwoFactorResponse);
  rpc RefreshToken(Nil) returns (TokenRefreshResponse);
}